<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/toolBarText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBarText"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/from_where_you_know_this_website"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rdBtnFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/facebook" />

            <RadioButton
                android:id="@+id/rdBtnGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/google" />

            <RadioButton
                android:id="@+id/rdBtnLinkedIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/linked" />

            <RadioButton
                android:id="@+id/rdBtnTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/twitter" />
        </RadioGroup>

        <TextView
            android:id="@+id/txtSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_button"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/start_chat"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivBlackBerry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/blackberry_messenger" />

        <ImageView
            android:id="@+id/ivWhatsApp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/whatsapp" />

    </LinearLayout>
</RelativeLayout>
