<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/are_u_sure_close_application"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_dialog_button_close"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/close_app"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_no"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_dialog_button_no"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/cancel"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
